--- a/res/values-nl/text.xml
+++ b/res/values-nl/text.xml
@@ -2,7 +2,7 @@
 <resources>
 <!-- TextViews -->
     <string name="TVcompcache">Compcache</string>
-    <string name="TVcompcachedisk">Grootte Compcache</string>
+    <string name="TVcompcachedisk">Grootte</string>
     <string name="TVswap">Alleen swap</string>
     <string name="TVoverclock1">Overklok CPU tot 614 MHz</string>
     <string name="TVoverclock2">Overklok CPU tot 710 MHz</string>
@@ -15,6 +15,13 @@
     <string name="TVbootani">Gebruik kleinere opstartanimatie</string>
     <string name="TVservicemode">Open Samsung service modus</string>
 	<string name="TVkitchen">Open GAOSP Keuken</string>
+	<string name="TVmemorythresholds">Memory Thresholds</string>
+	<string name="TVforegroundapp">Foreground app</string>
+	<string name="TVvisibleapp">Visible app</string>
+	<string name="TVsecondaryapp">Secondary Server</string>
+	<string name="TVhiddenapp">Hidden app</string>
+	<string name="TVcontentapp">Content provider</string>
+	<string name="TVemptyapp">Empty app</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
