--- a/res/values-da/description.xml
+++ b/res/values-da/description.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="compcache">Pakkaa sivutiedostot ja pidä ne RAM:issa virtuaalisesti lisäten RAM:in kapasiteettia. Tämä mahdollistaa useampien sovellusten samanaikaisen käytön, mutta se käyttää enemmän laitteen prosessoria. Tämä asetus aktivoi myös Swap osion.</string>
-	<string name="compcachedisk">Compcache:n levykoko</string>
-	<string name="swap">Android käyttää Swap tilaa "extra" muistina sivutiedostoille sovellusmuistissa, joita ei ole aktiivisesti käytetty sovelluksen toimesta, mutta on muokattu. Swap tilan koko plus RAM:in koko on systeemin käytettävissä olevan virtuaalisen muistin määrä. Luo Swap osio Recovery tilassa ennen käyttöä. Tarvitset erillisen SD kortin (Class 6 suositeltu).</string>
-	<string name="overclock1">Ylikellota prosessori -> 614 MHz.</string>
-	<string name="overclock2">Ylikellota prosessori -> 710 MHz. Epävakaa joillakin laitteilla.</string>
-	<string name="sampling">Laite säätelee prosessorin nopeutta tarpeen mukaan.</string>
-	<string name="sensors">Kuinka nopeasti sensorit reagoivat.</string>
-	<string name="ssh">Voit suorittaa Linux runkoa PC:ltäsi Galaxy laitteessasi.</string>
-	<string name="renice">Renice järjestelee prosessit uudelleen prioriteetin mukaan.</string>
-	<string name="provisionned">Voit käyttää Galaxy puhelintasi ilman SIM-korttia.</string>
-	<string name="vnc">Voit kontrolloida puhelinta tietokoneella(Käyttäen erikoistunutta sovellusta).</string>
-	<string name="bootani">Käyttää pienempää käynnistys animaatiota käynnistyksen nopeuttamiseksi.</string>
-	<string name="servicemode">Vain experteille! Täältä voit aktivoida Audio Hack.</string>
-	<string name="kitchen">Tee oma Google Sovellus Pakettisi.</string>
+    <string name="compcache">Komprimering af sider og beholde dem i RAM forøger kapaciteten. Dette tillader at flere applikationer kan være i samme mængde hukommelse. Men det kræver mere CPU tid. Det kræver også Swap.</string>
+	<string name="compcachedisk">Størrelsen af compcache</string>
+	<string name="swap">Android benytter swap som "ekstra" hukommelse til sider af en applikations hukommelse, som ikke er i aktiv brug af applikationen, men som er modificeret (skrevet til). Swap størrelsen plus RAM størrelsen er den totale mængde virtuelle hukommelse i systemet. Opret swap område i recovery tilstand først. Du skal have et eksternt SD kort (Klasse 6 anbefales).</string>
+	<string name="overclock1">Overclock din processor til 614 MHz.</string>
+	<string name="overclock2">Overclock din processor til 710 MHz. Ustabilt på nogle enheder.</string>
+	<string name="sampling">Dette er tidsintervallet i hvilket enheden bestemmer sin egen belastning. Efter hver sampling, øger eller mindsker enheden cpu hastigheden afhængig af belastningen.</string>
+	<string name="sensors">Hvor hurtigt alle sensorer reagerer.</string>
+	<string name="ssh">Tillader dig at køre en Linux shell fra din PC på din Galaxy.</string>
+	<string name="renice">Renice ændrer tidstildelingen prioriteten af en eller flere kørende processer.</string>
+	<string name="provisionned">Du kan benytte din Galaxy uden et SIM kort.</string>
+	<string name="vnc">You can control your phone from your computer (using a specialized app).</string>
+	<string name="bootani">Benytter en mindre opstarts animation så opstarts tid mindskes.</string>
+	<string name="servicemode">Kun for eksperter! Du kan tildele Audio hacks her.</string>
+	<string name="kitchen">Lav din egen specielle Google Application Package.</string>
 	<string name="memorythresholds">These are the thresholds from which the device will kill some processes, to free memory (below these thresholds, internal task killer will kill these apps). Make a Nandroid Backup before!</string>
 	<string name="foregroundapp">This is the application currently on the screen, and running. Do not change this value unless you have much knowledge about that!</string>
 	<string name="visibleapp">This is an application that is open, and running in the background because it is still doing something. Do not change this value unless you have much knowledge about that!</string>
