--- a/res/values-de/description.xml
+++ b/res/values-de/description.xml
@@ -14,4 +14,11 @@
 	<string name="bootani">Nutzt eine kleinere Bootanimation um die Bootzeit zu verkürzen.</string>
 	<string name="servicemode">Nur für Experten! Damit kann der Audio Hack angewandt werden.</string>
 	<string name="kitchen">Erstelle dein eingenes Google Application Paket.</string>
+	<string name="memorythresholds">Das sind die Speicher thresholds von welchen euer Gerät einige "killen" wird um mehr freien Speicher zu bekommen.(Der eingebaute task killer wird diese Prozesse "killen"). Vergiss nicht bewvor du etwas änderst ein Nandroid Backup zu machen!</string>
+	<string name="foregroundapp">Dieses Programm läuft im Hintergrund mit und verrichtet dort seine Arbeit. Verändere diesen Werte nicht, wenn du nicht genug Ahnung davon besitzt</string>
+	<string name="visibleapp">Dieses Programm läuft im Hintergrund mit und verrichtet dort seine Arbeit. Verändere diesen Werte nicht, wenn du nicht genug Ahnung davon besitzt!</string>
+	<string name="secondaryapp">Dies ist ein Prozess (ein Service den eine App benötigt) that is alive and ready in case it is needed to do something. Verändere diesen Werte nicht, wenn du nicht genug Ahnung davon besitzt</string>
+	<string name="hiddenapp">This again is a process, that sits idle (but still alive) in case it is needed by an app that is alive and running. Sei mit diesem Wert sehr vorsichtig!</string>
+	<string name="contentapp">Es gibt Programme die Daten an das System schicken wie z.B. der Android Market oder Google Sync. If they are alive, they can refresh and provide the content they are supposed to at the set interval. If you kill them, they can not of course.</string>
+	<string name="emptyapp">Wir nennen sie "Geister". Dies sind Programme, welche du geöffnet hast, aber nun mit ihnen fertig bist. Android besitzt eine enzigartige Weise wie es mit diesen Prozessen umgeht. Wenn eine Aktivität beendet ist schließt Android sie nicht, sondern lässt sie weiterhin im Speicher, sodass ein weiteres öffnen dieser App schneller vonstatten geht. Diese "Geister" beanspruchen nicht die Batterie oder die CPU, sondern füllen nur den Arbeitsspeicher. Wenn dieser Speicher dann gebraucht wird er "frei" gemacht, sodass er der neuen App zur Verfügung steht..</string>
 </resources>
