--- a/res/values-de/text.xml
+++ b/res/values-de/text.xml
@@ -15,6 +15,13 @@
     <string name="TVbootani">Kleinere Bootanimation</string>
     <string name="TVservicemode">Samsung Service Modus App</string>
     <string name="TVkitchen">GAOSP Kitchen</string>
+	<string name="TVmemorythresholds">Speicher thresholds</string>
+	<string name="TVforegroundapp">Vordergründige Programme</string>
+	<string name="TVvisibleapp">Sichtbare Programme</string>
+	<string name="TVsecondaryapp">Secondary Server</string>
+	<string name="TVhiddenapp">Verborgene Programme</string>
+	<string name="TVcontentapp">Content provider</string>
+	<string name="TVemptyapp">empty app</string>
     <!-- CheckBoxes -->
     <string name="CBeco">Eco</string>
     <string name="CBmix">Mix</string>
