--- a/res/values-fi/text.xml
+++ b/res/values-fi/text.xml
@@ -15,6 +15,13 @@
     <string name="TVbootani">Käytä pienempää käynnistysanimaatiota</string>
     <string name="TVservicemode">Avaa Samsung palvelu moodi</string>
 	<string name="TVkitchen">Avaa GAOSP Kitchen</string>
+	<string name="TVmemorythresholds">Memory Thresholds</string>
+	<string name="TVforegroundapp">Foreground app</string>
+	<string name="TVvisibleapp">Visible app</string>
+	<string name="TVsecondaryapp">Secondary Server</string>
+	<string name="TVhiddenapp">Hidden app</string>
+	<string name="TVcontentapp">Content provider</string>
+	<string name="TVemptyapp">Empty app</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
