--- a/res/values-fr/description.xml
+++ b/res/values-fr/description.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="compcache">Pakkaa sivutiedostot ja pidä ne RAM:issa virtuaalisesti lisäten RAM:in kapasiteettia. Tämä mahdollistaa useampien sovellusten samanaikaisen käytön, mutta se käyttää enemmän laitteen prosessoria. Tämä asetus aktivoi myös Swap osion.</string>
-	<string name="compcachedisk">Compcache:n levykoko</string>
-	<string name="swap">Android käyttää Swap tilaa "extra" muistina sivutiedostoille sovellusmuistissa, joita ei ole aktiivisesti käytetty sovelluksen toimesta, mutta on muokattu. Swap tilan koko plus RAM:in koko on systeemin käytettävissä olevan virtuaalisen muistin määrä. Luo Swap osio Recovery tilassa ennen käyttöä. Tarvitset erillisen SD kortin (Class 6 suositeltu).</string>
-	<string name="overclock1">Ylikellota prosessori -> 614 MHz.</string>
-	<string name="overclock2">Ylikellota prosessori -> 710 MHz. Epävakaa joillakin laitteilla.</string>
-	<string name="sampling">Laite säätelee prosessorin nopeutta tarpeen mukaan.</string>
-	<string name="sensors">Kuinka nopeasti sensorit reagoivat.</string>
-	<string name="ssh">Voit suorittaa Linux runkoa PC:ltäsi Galaxy laitteessasi.</string>
-	<string name="renice">Renice järjestelee prosessit uudelleen prioriteetin mukaan.</string>
-	<string name="provisionned">Voit käyttää Galaxy puhelintasi ilman SIM-korttia.</string>
-	<string name="vnc">Voit kontrolloida puhelinta tietokoneella(Käyttäen erikoistunutta sovellusta).</string>
-	<string name="bootani">Käyttää pienempää käynnistys animaatiota käynnistyksen nopeuttamiseksi.</string>
-	<string name="servicemode">Vain experteille! Täältä voit aktivoida Audio Hack.</string>
-	<string name="kitchen">Tee oma Google Sovellus Pakettisi.</string>
+    <string name="compcache">Compression de la RAM, augmentant virtuellement sa capacité. Permet à plus d´applications de s´exécuter en même temps, mais consomme plus de temps CPU. Le swap est également activé par cette option.</string>
+	<string name="compcachedisk">Taille de la mémoire compressible.</string>
+	<string name="swap">Android utilise le swap comme mémoire supplémentaire pour les pages qui ne sont pas utilisées depuis un certain temps. La taille du swap et celle de la RAM constituent le total de mémoire virtuelle disponible pour le système. Utilisez le mode recovery pour créer une partition swap. Nécessite une carte SD externe (Classe 6 recommandée).</string>
+	<string name="overclock1">Overclocker votre processeur à 614 MHz.</string>
+	<string name="overclock2">Overclocker votre processeur à 710 MHz, peut être instable sur certains terminaux.</string>
+	<string name="sampling">Intervalle de temps pendant lequel le système surveille la charge CPU. À chaque mesure, la fréquence du CPU peut être augmentée ou réduite en fonction de la charge courante.</string>
+	<string name="sensors">Vitesse de réaction des senseurs.</string>
+	<string name="ssh">Fournit un contrôle distant textuel (shell). Client SSH nécessaire.</string>
+	<string name="renice">Renice modifie la priorité d´ordonnancement des différents processus.</string>
+	<string name="provisionned">Permet d´utiliser son Galaxy sans Carte SIM.</string>
+	<string name="vnc">Fournit un contrôle distant graphique du téléphone. Client VNC nécessaire.</string>
+	<string name="bootani">Animation de départ plus légère, accélère le démarrage du téléphone.</string>
+	<string name="servicemode">Utilisateurs avertis uniquement. Permet de personnaliser les paramètres audio.</string>
+	<string name="kitchen">Permet de créer son propre paquet personnalisé d´applications Google.</string>
 	<string name="memorythresholds">These are the thresholds from which the device will kill some processes, to free memory (below these thresholds, internal task killer will kill these apps). Make a Nandroid Backup before!</string>
 	<string name="foregroundapp">This is the application currently on the screen, and running. Do not change this value unless you have much knowledge about that!</string>
 	<string name="visibleapp">This is an application that is open, and running in the background because it is still doing something. Do not change this value unless you have much knowledge about that!</string>
