--- a/res/values-pl/text.xml
+++ b/res/values-pl/text.xml
@@ -15,6 +15,13 @@
     <string name="TVbootani">Uzyj mniejszej animacji uruchamiania</string>
     <string name="TVservicemode">Otwórz tryb serwisowy Samsunga</string>
 	<string name="TVkitchen">Otwórz GAOSP Kitchen</string>
+	<string name="TVmemorythresholds">Memory Thresholds</string>
+	<string name="TVforegroundapp">Foreground app</string>
+	<string name="TVvisibleapp">Visible app</string>
+	<string name="TVsecondaryapp">Secondary Server</string>
+	<string name="TVhiddenapp">Hidden app</string>
+	<string name="TVcontentapp">Content provider</string>
+	<string name="TVemptyapp">Empty app</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
