--- a/res/values-zh-rCN/text.xml
+++ b/res/values-zh-rCN/text.xml
@@ -15,6 +15,13 @@
     <string name="TVbootani">使用小的开机动画</string>
     <string name="TVservicemode">打开三星服务模式</string>
 	<string name="TVkitchen">打开 GAOSP Kitchen</string>
+	<string name="TVmemorythresholds">Memory Thresholds</string>
+	<string name="TVforegroundapp">Foreground app</string>
+	<string name="TVvisibleapp">Visible app</string>
+	<string name="TVsecondaryapp">Secondary Server</string>
+	<string name="TVhiddenapp">Hidden app</string>
+	<string name="TVcontentapp">Content provider</string>
+	<string name="TVemptyapp">Empty app</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">经济</string>
 	<string name="CBmix">混合</string>
