--- a/res/values/description.xml
+++ b/res/values/description.xml
@@ -14,7 +14,7 @@
 	<string name="bootani">Uses a smaller bootanimation to decrease boot time.</string>
 	<string name="servicemode">For experts only! You can apply Audio Hack here.</string>
 	<string name="kitchen">Create your own custom Google Application Package.</string>
-	<string name="memorythresholds">These are the thresholds from which the device will kill some processes, to free memory (below these thresholds, internal task killer will kill these apps). Make a Nandroid backup before!</string>
+	<string name="memorythresholds">These are the thresholds from which the device will kill some processes, to free memory (below these thresholds, internal task killer will kill these apps). Make a Nandroid Backup before!</string>
 	<string name="foregroundapp">This is the application currently on the screen, and running. Do not change this value unless you have much knowledge about that!</string>
 	<string name="visibleapp">This is an application that is open, and running in the background because it is still doing something. Do not change this value unless you have much knowledge about that!</string>
 	<string name="secondaryapp">This is a process (a service that an application needs) that is alive and ready in case it is needed to do something. Do not change this value unless you have much knowledge about that!</string>
