--- a/res/values-it/description.xml
+++ b/res/values-it/description.xml
@@ -9,16 +9,16 @@
   	<string name="sensors">Velocità di reazione dei sensori.</string>
     <string name="ssh">Possibilità di aprire un terminale Linux dal PC sul Galaxy.</string>
     <string name="renice">Renice modifica le priorità di esecuzione dei processi attivi.</string>
-  	<string name="provisionned">Possibilità di utilizzo del Galaxy senza SIM Card.</string>
+	<string name="provisionned">Possibilità di utilizzo del Galaxy senza SIM Card.</string>
     <string name="vnc">Possibilità di controllare il Galaxy dal proprio computer attraverso un´applicazione specifica.</string>
     <string name="bootani">Utilizza una  bootanimation più leggera per velocizzare l´avvio del telefono.</string>
     <string name="servicemode">Per esperti! Possibilità di applicare Hack dell´Audio.</string>
     <string name="kitchen">Crea un pacchetto personalizzato di applicazioni Google.</string>
-	<string name="memorythresholds">These are the thresholds from which the device will kill some processes, to free memory (below these thresholds, internal task killer will kill these apps). Make a Nandroid Backup before!</string>
-	<string name="foregroundapp">This is the application currently on the screen, and running. Do not change this value unless you have much knowledge about that!</string>
-	<string name="visibleapp">This is an application that is open, and running in the background because it is still doing something. Do not change this value unless you have much knowledge about that!</string>
-	<string name="secondaryapp">This is a process (a service that an application needs) that is alive and ready in case it is needed to do something. Do not change this value unless you have much knowledge about that!</string>
-	<string name="hiddenapp">This again is a process, that sits idle (but still alive) in case it is needed by an app that is alive and running. Be careful with this setting!</string>
-	<string name="contentapp">They are applications that provide data (content) to the system. So are things like the Android Market, or Google Sync. If they are alive, they can refresh and provide the content they are supposed to at the set interval. If you kill them, they can not of course.</string>
-	<string name="emptyapp">We call these "ghosts." They are applications that you have opened, but are done with them. Android uses a unique style of handling memory management. When an activity is ended, instead of killing it off Android keeps the application in memory so that opening them again is a faster process. Theses "ghost" applications use no battery or CPU time, they just fill RAM that would be otherwise empty. When this memory is needed by a different application or process, the RAM is flushed and made available for the new application.</string>	
+    <string name="memorythresholds">Queste sono le soglie oltre le quali il telefono termina alcuni processi per liberare memoria (oltre queste soglie il task killer interno chiude le applicazioni). Eseguire un Nandroid Backup prima!</string>
+    <string name="foregroundapp">Queste sono le applicazioni che stai utilizzando a display. Non modificare questo valore senza avere conoscenza adeguata delle conseguenze!</string>
+ 	<string name="visibleapp">Applicazione aperta, ma non visibile, che sta terminando la propria attività in background. Non modificare questo valore senza avere conoscenza adeguata delle conseguenze!</string>
+  	<string name="secondaryapp">Processo (richiesto da altra applicazioni) attivo in memoria e pronto in caso di richieste di supporto da altra applicazione. Non modificare questo valore senza avere conoscenza adeguata delle conseguenze!</string>
+  	<string name="hiddenapp">Processo utilizzato da applicazione in esecuzione e pronto in caso di richieste di supporto. Non modificare questo valore senza avere conoscenza adeguata delle conseguenze!</string>
+    <string name="contentapp">Applicazioni che forniscono informazioni (contenuti)al sistema. Un esempio di applicazioni che utilizzano questi dati son Market o Google Sync. Se attive, i contenuti vengono aggiornati a intervalli regolari.</string>
+    <string name="emptyapp">Chiamate Fantasmi. Applicazioni eseguite e terminate. Android utilizza un metodo unico di gestione della memoria. Quando un processo termina di essere eseguito, invece di essere chiuso, rimane in memoria per un eventuale riavvio più veloce. Questi Fantasmi non consumano batteria , ne CPU, ma occupano memoria. Quando altre applicazioni richiedono memoria, la RAM viene ripulita da eventuali Fantasmi e resa disponibile.</string>
 </resources>
