--- a/res/values-pl/text.xml
+++ b/res/values-pl/text.xml
@@ -15,13 +15,13 @@
     <string name="TVbootani">Użyj mniejszej animacji uruchamiania</string>
     <string name="TVservicemode">Otwórz tryb serwisowy Samsunga</string>
 	<string name="TVkitchen">Otwórz GAOSP Kitchen</string>
-	<string name="TVmemorythresholds">Memory Thresholds</string>
-	<string name="TVforegroundapp">Foreground app</string>
-	<string name="TVvisibleapp">Visible app</string>
-	<string name="TVsecondaryapp">Secondary Server</string>
-	<string name="TVhiddenapp">Hidden app</string>
-	<string name="TVcontentapp">Content provider</string>
-	<string name="TVemptyapp">Empty app</string>
+	<string name="TVmemorythresholds">Progi pamięci</string>
+	<string name="TVforegroundapp">Pierwszoplanowa aplikacja</string>
+	<string name="TVvisibleapp">Widoczna aplikacja</string>
+	<string name="TVsecondaryapp">Drugorzędny serwer</string>
+	<string name="TVhiddenapp">Ukryta aplikacja</string>
+	<string name="TVcontentapp">Dostawca treści</string>
+	<string name="TVemptyapp">Pusta aplikacja</string>
 	<!-- CheckBoxes -->
 	<string name="CBeco">Eco</string>
 	<string name="CBmix">Mix</string>
