--- a/res/values-de/description.xml
+++ b/res/values-de/description.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="compcache">Komprimiert den Inhalt des Arbeitsspeichers (RAM). Dies erlaubt dir mehr Programme auszuführen. Wichtig, durch die Aktivierung wird die CPU beansprucht und Swap mitaktiviert.</string>
+    <string name="compcache">Komprimiert einen Teil des Arbeitsspeichers (RAM). Dies erlaubt dir mehr Programme auszuführen. Wichtig, durch die Aktivierung wird die CPU beansprucht und Swap mitaktiviert, sofern eine Swap Partition erstellt wurde.</string>
 	<string name="compcachedisk">Größe des Compcache</string>
 	<string name="swap">Android nutzt Swap als RAM-Erweiterung, so dass mehr Arbeitsspeicher zur Verfügung steht. Die Swapgröße und der eigenliche RAM ergeben zusammen den für das System komplett nutzbaren Arbeitsspeicher. Erstelle zuerst eine Swappartition auf deiner externen Speicherkarte im Recovery Menü. Eine Class 6 oder höhere Micro-SD Karte wird dafür ausdrücklich empfohlen.</string>
 	<string name="overclock1">Übertaktet deinen Prozessor auf 614 MHz.</string>
@@ -14,11 +14,11 @@
 	<string name="bootani">Nutzt eine kleinere Bootanimation um die Bootzeit zu verkürzen.</string>
 	<string name="servicemode">Nur für Experten! Damit kann der Audio Hack angewandt werden.</string>
 	<string name="kitchen">Erstelle dein eingenes Google Application Paket.</string>
-	<string name="memorythresholds">Das sind die Speicher thresholds von welchen euer Gerät einige "killen" wird um mehr freien Speicher zu bekommen.(Der eingebaute task killer wird diese Prozesse "killen"). Vergiss nicht bewvor du etwas änderst ein Nandroid Backup zu machen!</string>
-	<string name="foregroundapp">Dieses Programm läuft im Hintergrund mit und verrichtet dort seine Arbeit. Verändere diesen Werte nicht, wenn du nicht genug Ahnung davon besitzt</string>
-	<string name="visibleapp">Dieses Programm läuft im Hintergrund mit und verrichtet dort seine Arbeit. Verändere diesen Werte nicht, wenn du nicht genug Ahnung davon besitzt!</string>
-	<string name="secondaryapp">Dies ist ein Prozess (ein Service den eine App benötigt) that is alive and ready in case it is needed to do something. Verändere diesen Werte nicht, wenn du nicht genug Ahnung davon besitzt</string>
-	<string name="hiddenapp">This again is a process, that sits idle (but still alive) in case it is needed by an app that is alive and running. Sei mit diesem Wert sehr vorsichtig!</string>
-	<string name="contentapp">Es gibt Programme die Daten an das System schicken wie z.B. der Android Market oder Google Sync. If they are alive, they can refresh and provide the content they are supposed to at the set interval. If you kill them, they can not of course.</string>
-	<string name="emptyapp">Wir nennen sie "Geister". Dies sind Programme, welche du geöffnet hast, aber nun mit ihnen fertig bist. Android besitzt eine enzigartige Weise wie es mit diesen Prozessen umgeht. Wenn eine Aktivität beendet ist schließt Android sie nicht, sondern lässt sie weiterhin im Speicher, sodass ein weiteres öffnen dieser App schneller vonstatten geht. Diese "Geister" beanspruchen nicht die Batterie oder die CPU, sondern füllen nur den Arbeitsspeicher. Wenn dieser Speicher dann gebraucht wird er "frei" gemacht, sodass er der neuen App zur Verfügung steht..</string>
+	<string name="memorythresholds">Die Speicher Thresholds geben an, ab wann euer Gerät einige laufende Programme beenden wird, um mehr freien Speicher zu bekommen. Vor Änderungen unbedingt ein Nandroid Backup machen!</string>
+	<string name="foregroundapp">Alle Programme, welche gerade im Vordergrund laufen und zu sehen sind. Verändere diesen Werte nicht, wenn du keine Ahnung davon hast!</string>
+	<string name="visibleapp">Diese Programme laufen im Hintergrund mit und verrichtet dort ihre Arbeit. Verändere diesen Werte nicht, wenn du keine Ahnung davon hast!</string>
+	<string name="secondaryapp">Dies sind Prozesse (Services, welche eine App benötigt), welcher ausgeführt wird und bereit ist, falls er gebraucht wird. Verändere diesen Werte nicht, wenn du keine Ahnung davon hast!</string>
+	<string name="hiddenapp">Dies sind Prozesse, welche sich im Leerlauf befinden, aber reaktiviert werden können, wenn sie von einer anderen App benötigt werden. Sei mit diesem Wert vorsichtig!</string>
+	<string name="contentapp">Dies sind Programme die Daten an das System schicken wie z.B. der Android Market oder Google Sync. Sie können, wenn ausgeführt Daten für das System bereitstellen. Wenn sie beendet werden, können sie das natürlich nicht mehr.</string>
+	<string name="emptyapp">Wir nennen sie "Geister". Dies sind Programme, welche du geöffnet hast, aber nun mit ihnen fertig bist. Android besitzt eine enzigartige Weise wie es mit diesen Prozessen umgeht. Wenn eine Aktivität beendet ist schließt Android sie nicht, sondern lässt sie weiterhin im Speicher, sodass ein weiteres öffnen dieser App schneller vonstatten geht. Diese "Geister" beanspruchen nicht die Batterie oder die CPU, sondern füllen nur den Arbeitsspeicher. Wenn dieser Speicher dann gebraucht wird er "frei" gemacht, sodass er einer anderen  App zur Verfügung steht.</string>
 </resources>
